cabal-version:      2.4
name:               Express
version:            0.1.0.0

author:             lappna
maintainer:         nathan.lapp@sheridancollege.ca






extra-source-files:
    CHANGELOG.md
    README.md

executable ExpressMain
    main-is:          Main.hs

    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src

    default-language: Haskell2010
    other-modules:    Express.Parser
                      Express.Interpreter
                      Express.Lexer
